--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,7 +36,7 @@ body {
  
   position: relative;
   border-bottom: 1px solid rgb(100, 100, 100);
-  width: 380px;
+  /* width: 380px; */
 }
 
 .user-card .text-content {
@@ -67,15 +67,25 @@ body {
 
 /* Chat Box */
 .chat-box {
-  max-height: calc(100vh - 10rem);
-  overflow-y: auto;
+  /* max-height: calc(100vh - 10rem); */
+  /* overflow-y: auto; */
   background: rgb(25, 25, 25);
   border-radius: 10px;
+  max-width: 430px;
 }
 
 .messages-box {
   height: 85vh;
+  width: 35%;
 }
+
+
+.react-emoji-picker--wrapper{
+  height: 20em !important;
+  width: 19em !important;
+  border-radius: 14px;
+}
+
 
 /* Chat Header */
 .chat-header {
@@ -89,9 +99,10 @@ body {
 
 /* Messages */
 .messages {
-  max-height: calc(100vh - 15rem);
+  max-height: calc(100vh - 10rem);
   overflow-y: auto;
   padding: 0 2rem;
+  overflow-x: hidden;
 }
 
 .message {
