--- a/client/src/index.css
+++ b/client/src/index.css
@@ -103,7 +103,7 @@ body {
   overflow-y: auto;
   padding: 0 2rem;
   overflow-x: hidden;
-  flex-direction: column-reverse;
+  /* flex-direction: column-reverse; */
 }
 
 .message {
