--- a/client/src/index.css
+++ b/client/src/index.css
@@ -143,6 +143,10 @@ body {
   top: 11%;
 }
 
+.background-image-opacity{
+  background-color: rgba(0, 0, 0, 0.57);
+}
+
 .message.self {
  
   background: #00bd9b;
