--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -246,3 +246,53 @@
   }
 
 //   ----------------CHAT BOX ENDED-------------------
+
+/* POTENTIAL CHATS */
+ 
+.all-users {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 1rem;
+
+}
+
+.single-user {
+  display: flex;
+  flex-direction: row;
+  gap: 0.8rem;
+  background-color: $genericBlueColor;
+  cursor: pointer;
+  padding: 5px 7px;
+  border-radius: 10px;
+  margin-right: 0.5rem;
+  position: relative;
+}
+
+.single-user:hover{
+background-color: $buttonHoverColor;
+
+}
+
+.user-online {
+  display: inline-block;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  background: rgb(0, 219, 0);
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  z-index: 2;
+}
+
+.multiple-chat-btn{
+  border: unset;
+    outline: unset;
+    text-decoration: none;
+    border-radius: 50px;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+
+// ----------POTENTIAL CHATS ENDED------------
