--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -253,6 +253,7 @@
   display: grid;
   grid-template-columns: repeat(3,1fr);
   gap: 1rem;
+  margin-bottom: 3%;
 
 }
 
@@ -266,6 +267,8 @@
   border-radius: 10px;
   margin-right: 0.5rem;
   position: relative;
+
+
 }
 
 .single-user:hover{
@@ -285,13 +288,18 @@ background-color: $buttonHoverColor;
   z-index: 2;
 }
 
-.multiple-chat-btn{
+.btnn{
   border: unset;
     outline: unset;
     text-decoration: none;
-    border-radius: 50px;
+    border-radius: 10px;
     padding: 0.5rem;
     margin-bottom: 1rem;
+    background-color: white !important;
+}
+
+.btnn:hover{
+  background-color: #d3d0ca !important;
 }
 
 
