--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -106,5 +106,151 @@ overflow-y: hidden;
   background-color: rgb(38 98 157);
 }
 
+// ---------------------------
+
+// body {
+// 	overflow: hidden;	
+// 	background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%, rgba(0,0,0,0.44) 100%); /* FF3.6+ */
+// 	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.44))); /* Chrome,Safari4+ */
+// 	background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* Chrome10+,Safari5.1+ */
+// 	background: -o-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* Opera 12+ */
+// 	background: -ms-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* IE10+ */
+// 	background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* W3C */
+// }
+.p_tag{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+.p_tag{
+	// display: table-cell;
+	// text-align: center;
+	// vertical-align: middle;
+	font-size: 2em;
+	line-height: 2em;
+  // width: 100vw;
+}
+i {
+	display: inline-block;
+	font-style: normal;
+	padding: 0 0.25em;
+
+}
+
+i.rishab {
+	 -webkit-animation: rishab 3s 1 ease-in-out;
+	-moz-animation: rishab 3s 1 ease-in-out;
+	-o-animation: rishab 3s 1 ease-in-out;
+	animation: rishab 3s 1 ease-in-out;
+       
+}
+
+// @-webkit-keyframes rishab {
+// 	0% {
+// 		-webkit-transform: scale(0) translate3d(0, -1000px, 0);
+// 		background: rgba(255, 255, 255, 0.3);
+// 		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
+// 		border-radius: 50%;
+// 	}
+// 	15%, 85% {
+// 		color: rgba(255, 255, 255, 0.8);
+// 		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+// 		-webkit-transform: scale(1) translate3d(0, 0, 0);
+// 		background: transparent;
+// 		box-shadow: none;
+// 	}
+// 	100% {
+// 		color: unset;	
+// 		-webkit-transform: scale(0) translate3d(0, 0, 0);
+	
+// 	}
+// }
+
+// @-moz-keyframes rishab {
+// 	0% {
+// 		-moz-transform: scale(0) translate3d(0, -2000px, 0);
+// 		background: rgba(255, 255, 255, 0.3);
+// 		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
+// 		border-radius: 50%;
+// 	}
+// 	15%, 85% {
+// 		color: rgba(255, 255, 255, 0.8);
+// 		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+// 		-moz-transform: scale(1) translate3d(0, 0, 0);
+// 		background: transparent;
+// 		box-shadow: none;
+// 	}
+// 	100% {
+//     color: unset;	
+// 		-moz-transform: scale(1) translate3d(0, 0, 0);
+		
+// 	}
+// }
+// @-o-keyframes rishab {
+// 	0% {
+// 		-o-transform: scale(0) translate3d(0, -2000px, 0);
+// 		background: rgba(255, 255, 255, 0.3);
+// 		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
+// 		border-radius: 50%;
+// 	}
+// 	15%, 85% {
+// 		color: rgba(255, 255, 255, 0.8);
+// 		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+// 		-o-transform: scale(1) translate3d(0, 0, 0);
+// 		background: transparent;
+// 		box-shadow: none;
+// 	}
+// 	100% {
+// 		color: unset;	
+// 		-o-transform:  scale(1) translate3d(0, 0, 0);
+		
+// 	}
+// }
+@keyframes rishab {
+	0% {
+		transform: scale(0) translate3d(0, -2000px, 0);
+		background: rgba(255, 255, 255, 0.3);
+		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
+		border-radius: 50%;
+	}
+	15%, 85% {
+		color: rgba(255, 255, 255, 0.8);
+		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+		transform: scale(1) translate3d(0, 0, 0);
+		background: transparent;
+		box-shadow: none;
+	}
+	100% {
+		color: unset !important;	
+		transform: scale(1) translate3d(0, 0, 0);
+		
+	}
+}
+
+
+.pos_abs{
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white !important;
+  color: black;
+  border: unset !important;
+  text-decoration: unset;
+  outline: none !important;
+  padding: 20px;
+  border-radius: 15px;
+
+  &:hover{
+    background-color: #d3d0ca !important;
+  }
+
+}
+
+
+// ----------------------------
+
 /* ------ */
 
