--- a/client/src/pages/introPage/introPage.scss
+++ b/client/src/pages/introPage/introPage.scss
@@ -1,12 +1,12 @@
 .register_login{
     display: flex;
-    margin-top: 3%;
-    gap:15%;
+    // margin-top: 3%;
+    gap:13%;
     align-items: center;
 
     & > img{
-        height:400px;
-        width: 40%;
+        height:94vh;
+        width: 50%;
     }
 
 }
