--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -6,7 +6,7 @@
     /* max-height: calc(100vh - 10rem); */
     /* overflow-y: auto; */
     /* max-height: calc(90vh); */
-    max-height: 90%;
+    max-height: calc(100vh - 3.4rem);
     background: rgb(25, 25, 25);
     border-radius: 10px;
     max-width: 50%
@@ -19,7 +19,7 @@
   }
   
   .messages-box {
-    height: 85vh;
+    height:calc(100vh - 3.4rem);
     width: 35%;
     border: 2px solid green;
   }
@@ -128,7 +128,8 @@
   /* Chat Input  */
   .chat-input {
     width: 100%;
-    background: rgb(30, 30, 30);
+    // background: rgb(30, 30, 30);
+    background-color: #00bd9b;
     padding: 0.4rem;
     display: flex;
     align-items: center;
@@ -253,7 +254,7 @@
   display: grid;
   grid-template-columns: repeat(3,1fr);
   gap: 1rem;
-  margin-bottom: 3%;
+  margin-bottom: 6%;
 
 }
 
@@ -268,13 +269,19 @@
   margin-right: 0.5rem;
   position: relative;
 
+  input{
+    cursor: pointer;
+  }
+
 
 }
 
 .single-user:hover{
 background-color: $buttonHoverColor;
+transition: all 0.4s ease-in-out;
 
 }
+
 
 .user-online {
   display: inline-block;
@@ -293,13 +300,15 @@ background-color: $buttonHoverColor;
     outline: unset;
     text-decoration: none;
     border-radius: 10px;
-    padding: 0.5rem;
+    padding: 0.5rem 0.75rem;
     margin-bottom: 1rem;
     background-color: white !important;
+    font-size: 13px;
 }
 
 .btnn:hover{
   background-color: #d3d0ca !important;
+  transition: all 0.4s ease-in-out;
 }
 
 
