--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -122,6 +122,8 @@ overflow-y: hidden;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
 
 }
 .p_tag{
