--- a/client/src/pages/introPage/introPage.scss
+++ b/client/src/pages/introPage/introPage.scss
@@ -3,10 +3,58 @@
     // margin-top: 3%;
     gap:13%;
     align-items: center;
+    
 
-    & > img{
-        height:94vh;
-        width: 50%;
+    &_img_div {
+    height:94vh;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    background-color: red;
+    justify-content: space-evenly;
+    position: relative;
+
+     img:first-child{
+       margin-left: 55%;
+    }
+
+    img:nth-child(2){
+        margin-left: 10%;
+    }
+
+  
+    .dots {
+        display: flex;
+        flex-wrap: wrap; /* Wrap the dots */
+        width: 100%;
+        height: 100%;
+        position: relative; /* Needed for absolute positioning of dots */
+      }
+      
+      .dot {
+        height: 8px;
+        width: 8px;
+        background-color: green;
+        border-radius: 50%;
+        position: absolute; /* Allows for custom positioning */
+      }
+      
+      /* Example positions for the dots */
+      .dot:nth-child(1) { transform: translate(164px, 20px); }
+      .dot:nth-child(2) { transform: translate(131px, 100px); }
+      .dot:nth-child(3) { transform: translate(80px, 200px); }
+      .dot:nth-child(4) { transform: translate(191px, -21px); }
+      .dot:nth-child(5) { transform: translate(102px, 157px); }
+      /* Add more rules as needed */
+      
+    
+       
+
+        img{
+            // height: 300px;
+            width: 30%;
+        }
     }
 
 }
