--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -7,7 +7,7 @@
     /* overflow-y: auto; */
     /* max-height: calc(90vh); */
     max-height: calc(100vh - 3.4rem);
-    background: rgb(25, 25, 25);
+    background: black;
     border-radius: 10px;
     max-width: 50%
   }
@@ -53,7 +53,8 @@
   /* Messages */
   .messages {
     max-height: calc(100vh - 10rem);
-    overflow-y: auto;
+     overflow-y: auto;
+    
     padding: 0 2rem;
     overflow-x: hidden;
    
@@ -83,6 +84,16 @@
 
         }
     }
+  }
+
+  .messages::-webkit-scrollbar{
+    width: 10px;
+    
+  }
+  .messages::-webkit-scrollbar-thumb {
+    background-color: darkgray;
+    border-radius: 10px;
+    min-height: 200px;
   }
   
   .message {
