--- a/client/src/pages/introPage/introPage.scss
+++ b/client/src/pages/introPage/introPage.scss
@@ -6,7 +6,8 @@
     
 
     &_img_div {
-    height:94vh;
+    // height:94vh;
+    height: calc(100vh - 3.4rem);
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -15,13 +16,13 @@
     justify-content: space-evenly;
     position: relative;
 
-     img:first-child{
-       margin-left: 55%;
-    }
+    //  img:first-child{
+    //    margin-left: 55%;
+    // }
 
-    img:nth-child(2){
-        margin-left: 10%;
-    }
+    // img:nth-child(2){
+    //     margin-left: 10%;
+    // }
 
   
     .dots {
@@ -52,8 +53,9 @@
        
 
         img{
-            // height: 300px;
-            width: 30%;
+         
+            // width: 30%;
+            height: 100%;
         }
     }
 
