--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -25,9 +25,8 @@
   }
   .svg-icon{
     position: fixed;
-      background-color: rgb(23, 95, 159);
-      bottom: 19%;
-      right: 26%;
+      bottom: 12%;
+      right: 24%;
       margin: auto;
       cursor: pointer;
   }
@@ -87,13 +86,13 @@
   }
 
   .messages::-webkit-scrollbar{
-    width: 10px;
+    width: 7px;
     
   }
   .messages::-webkit-scrollbar-thumb {
-    background-color: darkgray;
+    background-color: $genericBlueColor;
     border-radius: 10px;
-    min-height: 200px;
+    min-height: 180px;
   }
   
   .message {
@@ -102,6 +101,9 @@
     padding: 0.75rem;
     border-radius: 5px;
     max-width: 50%;
+    color: white;
+    min-width: 150px;
+    gap: 4px;
   }
   
   .timeline{
@@ -125,22 +127,23 @@
     max-height: 50%;
   }
   .message.self {
-   
-    background: #00bd9b;
-    color: #711010eb;
+    background-color: rgb(40 95 149);
+    color: white;
   }
   
   .message-footer {
     font-size: 12px;
     align-self: flex-end;
     font-weight: 400;
+    color: #bfb9b9;
+    width: 100%;
   }
   
   /* Chat Input  */
   .chat-input {
     width: 100%;
     // background: rgb(30, 30, 30);
-    background-color: #00bd9b;
+    //  background-color: #00bd9b;
     padding: 0.4rem;
     display: flex;
     align-items: center;
@@ -158,6 +161,10 @@
     height: 40px;
     width: 40px;
     border-radius: 50%;
+
+    svg{
+      fill: white;
+    }
   }
   
   
