single message emoji

--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -263,6 +263,13 @@
     align-items: center;
     justify-content: center;
   }
+.emoji{
+  font-family: emoji;
+}
+.only-emoji{
+  font-size: xxx-large;
+  font-family: emoji;
+}
 
 //   ----------------CHAT BOX ENDED-------------------
 
