chatbox design changes

--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -271,6 +271,12 @@
   font-family: emoji;
 }
 
+.only-time{
+  min-width: unset !important;
+  border-radius: 20px;
+  font-size: 12px;
+}
+
 //   ----------------CHAT BOX ENDED-------------------
 
 /* POTENTIAL CHATS */
