--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -56,6 +56,7 @@
     
     padding: 0 2rem;
     overflow-x: hidden;
+    align-self: unset !important;
    
     h5{
         text-align: center;
@@ -77,6 +78,7 @@
         position: sticky;
         display: flex;
         justify-content: center;
+        top: 16px;
 
         span:first-child{
             border-radius: 50px;
@@ -165,6 +167,10 @@
     svg{
       fill: white;
     }
+  }
+
+  .flex-end{
+    justify-content: flex-end;
   }
   
   
@@ -335,11 +341,17 @@ transition: all 0.4s ease-in-out;
     margin-bottom: 1rem;
     background-color: white !important;
     font-size: 13px;
+    width: 25%;
 }
 
 .btnn:hover{
   background-color: #d3d0ca !important;
   transition: all 0.4s ease-in-out;
+}
+
+.multiple-chats{
+  display: flex;
+  justify-content: center;
 }
 
 
