--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -10,6 +10,9 @@ $fontColor:white;
 $genericBackgroundColor:black;
 $input_Font_Size:16px;
 
+// Responsive part 
+$responsiveFrameSize1:1000px;
+
 
 
 body{
