--- a/client/src/pages/registerPage/register.scss
+++ b/client/src/pages/registerPage/register.scss
@@ -11,7 +11,20 @@
         flex-direction:row;
         gap:1rem;
         font-size: $input_Font_Size;
-        height: 30px;
+        // height: 30px;
+        max-width: 210px;
+        margin-left: 5%;
+
+        &_male{
+          @media screen and (max-width: $responsiveFrameSize1) {
+            max-width: 80px !important;
+          }
+        }
+
+        @media screen and (max-width: 500px) {
+         flex-direction: column;
+         gap: 0.25rem;
+        }
         
       }
 
