--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -265,7 +265,7 @@ i.rishab {
 .loading-chats{
   justify-content: space-between;
   gap: 4.5rem;
-  height: 100vh;
+  // height: 100vh;
   background: rgb(25, 25, 25);
 }
 
