--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -82,7 +82,7 @@
   
   /* Messages */
   .messages {
-    max-height: calc(100vh - 10rem);
+    // max-height: calc(100vh - 10rem);
      overflow-y: auto;
     
     padding: 0 2rem;
