--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -15,6 +15,7 @@
     background: black;
     border-radius: 10px;
     max-width: 50%;
+   
 
 
     // @media screen and (max-width: $responsiveFrameSize1) {
@@ -55,8 +56,8 @@
     right: 50% !important;
   }
   .svg-icon{
-    position: fixed;
-      bottom: 12%;
+    position: absolute;
+      bottom: 100px;
       right: 24%;
       margin: auto;
       cursor: pointer;
@@ -84,7 +85,6 @@
   .messages {
     // max-height: calc(100vh - 10rem);
      overflow-y: auto;
-    
     padding: 0 2rem;
     overflow-x: hidden;
     align-self: unset !important;
