--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -32,6 +32,11 @@ $z_index:4;
         gap: 2rem;
         justify-content: flex-start !important;
         margin-left: 1%;
+        @media screen and (max-width: 500px)
+        {
+            gap: 1rem;
+        }
+
     }
 
     .user_img{
@@ -45,6 +50,7 @@ $z_index:4;
     .fa-arrow{
         position: absolute;
         left: 10px;
+        top: 20px;
         cursor: pointer;
     }
 
