--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -12,6 +12,16 @@ $input_Font_Size:16px;
 
 // Responsive part 
 $responsiveFrameSize1:1000px;
+$responsiveFrameSize2:500px;
+$modalFontSize1:16px;
+$modalFontSize2:14px;
+$modalFontSize3:13px;
+
+$modalInputSize1:14px;
+$modalInputSize2:12px;
+$modalInputSize3:11px;
+
+
 
 
 
@@ -68,45 +78,6 @@ overflow-y: hidden;
 
 /* ---Navbar */
 
-.underline{
-  position: relative;
-  display: inline-block;
-}
-.underline::before{
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -3px;
-  width: 100%;
-  height: 2.5px;
-  background-color: white;
-  border-radius: 50px;
-  
-}
-.add-hover {
-  position: relative;
-  display: inline-block;
-}
-
-.add-hover::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -3px;
-  width: 100%;
-  height: 2.5px;
-  background-color: white;
-  transform: scaleX(0);
-  transform-origin: center;
-  transition: transform 0.5s ease-in-out;
-  border-radius: 50px;
-  
-}
-
-.add-hover:hover::after,.add-hover:focus::after {
-  transform: scaleX(1);
-}
-
 
 .submit-button{
   border-radius: 50px;
@@ -136,16 +107,28 @@ overflow-y: hidden;
   transform: translate(-50%, -50%);
   width: 100%;
   text-align: center;
+  color: $genericBlueColor;
+  font-size:32px;
+	line-height: 2em;
+  text-shadow: -2px -1px 1px rgb(12, 69, 125);
+
+  @media screen and (max-width:1000px) and (min-width : 800px) {
+    font-size :29px;
+  }
+
+  @media screen and (max-width:800px) and (min-width:600px) {
+    font-size : 24px
+  }
+  @media screen and (max-width:600px) and (min-width:400px) {
+    font-size : 20px
+  }
+
+  @media screen and (max-width:400px)  {
+    font-size : 16px
+  }
 
 }
-.p_tag{
-	// display: table-cell;
-	// text-align: center;
-	// vertical-align: middle;
-	font-size: 2em;
-	line-height: 2em;
-  // width: 100vw;
-}
+
 i {
 	display: inline-block;
 	font-style: normal;
@@ -161,67 +144,69 @@ i.rishab {
        
 }
 
-// @-webkit-keyframes rishab {
-// 	0% {
-// 		-webkit-transform: scale(0) translate3d(0, -1000px, 0);
-// 		background: rgba(255, 255, 255, 0.3);
-// 		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-// 		border-radius: 50%;
-// 	}
-// 	15%, 85% {
-// 		color: rgba(255, 255, 255, 0.8);
-// 		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-// 		-webkit-transform: scale(1) translate3d(0, 0, 0);
-// 		background: transparent;
-// 		box-shadow: none;
-// 	}
-// 	100% {
-// 		color: unset;	
-// 		-webkit-transform: scale(0) translate3d(0, 0, 0);
+@-webkit-keyframes rishab {
+	0% {
+		-webkit-transform: scale(0) translate3d(0, -1000px, 0);
+		background: rgba(255, 255, 255, 0.3);
+		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
+		border-radius: 50%;
+	}
+	15%, 85% {
+		color: rgba(255, 255, 255, 0.8);
+		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+		-webkit-transform: scale(1) translate3d(0, 0, 0);
+		background: transparent;
+		box-shadow: none;
+	}
+	100% {
+    color: unset !important;	
+		-webkit-transform: scale(1) translate3d(0, 0, 0);
 	
-// 	}
-// }
+	}
+}
 
-// @-moz-keyframes rishab {
-// 	0% {
-// 		-moz-transform: scale(0) translate3d(0, -2000px, 0);
-// 		background: rgba(255, 255, 255, 0.3);
-// 		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-// 		border-radius: 50%;
-// 	}
-// 	15%, 85% {
-// 		color: rgba(255, 255, 255, 0.8);
-// 		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-// 		-moz-transform: scale(1) translate3d(0, 0, 0);
-// 		background: transparent;
-// 		box-shadow: none;
-// 	}
-// 	100% {
-//     color: unset;	
-// 		-moz-transform: scale(1) translate3d(0, 0, 0);
+@-moz-keyframes rishab {
+	0% {
+		-moz-transform: scale(0) translate3d(0, -2000px, 0);
+    background: rgba(255, 255, 255, 0.3);
+		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
+		border-radius: 50%;
+	}
+	15%, 85% {
+		color: rgba(255, 255, 255, 0.8);
+		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+		-moz-transform: scale(1) translate3d(0, 0, 0);
+		background: transparent;
+		box-shadow: none;
+	}
+	100% {
+  	color: unset !important;	
+		-moz-transform: scale(1) translate3d(0, 0, 0);
 		
-// 	}
-// }
-// @-o-keyframes rishab {
-// 	0% {
-// 		-o-transform: scale(0) translate3d(0, -2000px, 0);
-// 		background: rgba(255, 255, 255, 0.3);
-// 		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-// 		border-radius: 50%;
-// 	}
-// 	15%, 85% {
-// 		color: rgba(255, 255, 255, 0.8);
-// 		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-// 		-o-transform: scale(1) translate3d(0, 0, 0);
-// 		background: transparent;
-// 		box-shadow: none;
-// 	}
-// 	100% {
-// 		color: unset;	
-// 		-o-transform:  scale(1) translate3d(0, 0, 0);
+	}
+}
+
+@-o-keyframes rishab {
+	0% {
+		-o-transform: scale(0) translate3d(0, -2000px, 0);
+		background: rgba(255, 255, 255, 0.3);
+		box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
+		border-radius: 50%;
+	}
+	15%, 85% {
+		color: rgba(255, 255, 255, 0.8);
+		text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+		-o-transform: scale(1) translate3d(0, 0, 0);
+		background: transparent;
+		box-shadow: none;
+	}
+	100% {
+		color: unset !important;	
+		-o-transform:  scale(1) translate3d(0, 0, 0);
 		
-// 	}
-// }
+	}
+}
+
 @keyframes rishab {
 	0% {
 		transform: scale(0) translate3d(0, -2000px, 0);
