--- a/client/src/pages/modal/modalContent.scss
+++ b/client/src/pages/modal/modalContent.scss
@@ -1,6 +1,6 @@
 @import "../../index.scss";
 .ReactModal__Overlay {
-  background-color: rgba(0, 0, 0, 0.57) !important;
+  background-color: rgb(48 47 47 / 57%) !important;
 }
 .ReactModal__Content {
   width: unset;
