--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -43,6 +43,9 @@ overflow-y: hidden;
   position: relative;
  
   border-bottom: 2px solid rgb(100, 100, 100);
+  height: 72px;
+  padding-left: 4px;
+ 
   /* width: 380px; */
 }
 .user-card:hover{
@@ -50,9 +53,21 @@ overflow-y: hidden;
 }
 
 .user-card .text-content {
-  width: 170px;
+  width: 100%;
   color: white;
+  height: 100%;
+// padding-top: 0.75rem;
 }
+.full-height{
+	height: 100%;
+}
+.text-content{
+	padding: 0.5rem;
+}
+.name{
+	padding-top: 0.75rem;
+}
+
 
 .user-card .name {
   font-weight: 700;
@@ -70,6 +85,11 @@ overflow-y: hidden;
   border-radius: 50%;
   cursor: pointer;
   align-items: center;
+}
+
+.flex-space-between{
+	display: flex;
+	justify-content: space-between;
 }
 
 
