--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -75,11 +75,52 @@
   cursor: pointer;
 }
 
-.react-emoji-picker--wrapper {
-  height: 20em !important;
-  width: 19em !important;
-  border-radius: 14px;
-}
+  .resize-svg-icon{
+    right: 48% !important;
+  }
+  .svg-icon{
+    position: fixed;
+      bottom: 12%;
+      right: 24%;
+      margin: auto;
+      cursor: pointer;
+  }
+  
+  
+  .react-emoji-picker--wrapper{
+    height: 20em !important;
+    width: 19em !important;
+    border-radius: 14px;
+  }
+  
+  
+  /* Chat Header */
+  .chat-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.75rem;
+   
+    background: rgb(30, 30, 30);
+  }
+  
+  /* Messages */
+  .messages {
+    // max-height: calc(100vh - 10rem);
+     overflow-y: auto;
+    
+    padding: 0 2rem;
+    overflow-x: hidden;
+    align-self: unset !important;
+   
+    h5{
+        text-align: center;
+        padding: 1rem 0;
+        font-family: system-ui;
+        color: $genericBlueColor;
+        cursor: unset !important;
+    }
+  }
 
 /* Chat Header */
 .chat-header {
