--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -120,7 +120,7 @@ overflow-y: hidden;
 // 	background: -ms-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* IE10+ */
 // 	background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* W3C */
 // }
-.p_tag{
+.displayAnimation{
   position: absolute;
   top: 50%;
   left: 50%;
