--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -389,6 +389,10 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
+ 
+  @media screen and (max-width:450px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
   // margin-bottom: 6%;
 }
 
