feat:ellipsis,routing, fix: login/register validation

--- a/client/src/customComponents/loader/loader.scss
+++ b/client/src/customComponents/loader/loader.scss
@@ -30,6 +30,12 @@ $height: 35px;
   }
 }
 
+.holder-chatbox{
+  position: relative !important;
+  top: unset !important;
+}
+
+
 .panel {
   display: flex;
   flex-direction: row;
