--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -24,6 +24,50 @@
   // }
 }
 
+.ellipsis{
+	 
+	max-width:500px;
+	text-overflow: ellipsis;
+	white-space: nowrap !important;
+	display: block !important;
+	overflow: hidden;
+
+   @media screen and (min-width: 1800px) {
+  	max-width:450px;
+  }
+    @media screen and (max-width: 1800px) and (min-width:1600px) {
+  	max-width:375px;
+  }
+
+  @media screen and (max-width: 1600px) and (min-width:1400px) {
+  	max-width:350px;
+  }
+  @media screen and (max-width: 1400px) and (min-width:1200px) {
+  	max-width:300px;
+  }
+  @media screen and (max-width: 1200px) and (min-width:1000px) {
+  	max-width:200px;
+  }
+  @media screen and (max-width: 1000px) and (min-width:800px) {
+  	max-width:650px;
+  }
+  @media screen and (max-width: 800px) and (min-width:600px) {
+  	max-width:475px;
+  }
+  @media screen and (max-width: 600px) and (min-width:500px) {
+  	max-width:375px;
+  }
+  @media screen and (max-width: 500px) and (min-width:400px) {
+  	max-width:250px;
+  }
+  @media screen and (max-width: 400px) and (min-width:200px) {
+  	max-width:125px;
+  }
+  @media screen and (max-width: 200px)  {
+  	max-width:50px;
+  }
+}
+
 .font-size{
   font-size: 22px;
 }
