--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -77,6 +77,7 @@ overflow-y: hidden;
 .user-card .date {
   font-size: 14px;
   color: rgb(180, 180, 180);
+  text-wrap: nowrap;
 }
 
 .user-img{
@@ -120,6 +121,16 @@ overflow-y: hidden;
 // 	background: -ms-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* IE10+ */
 // 	background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 100%); /* W3C */
 // }
+
+#displayText{
+	position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+	font-size: 20px;
+}
 .displayAnimation{
   position: absolute;
   top: 50%;
